--- a/css/custom.css
+++ b/css/custom.css
@@ -73,7 +73,6 @@ body {
 }
 
 body {
-  position: relative;
   font-family: var(--default-font);
   font-size: 18px;
   font-weight: 400;
@@ -6439,4 +6438,21 @@ header.main-header .header-sticky.active {
 }
 .location {
   margin: 30px 0;
+}
+
+.vdo {
+  position: relative;
+  width: 100%;
+  height: 730px;
+  overflow: hidden;
+}
+
+.vdo iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 120%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
 }
