--- a/css/custom.css
+++ b/css/custom.css
@@ -6456,8 +6456,7 @@ header.main-header .header-sticky.active {
   transform: translate(-50%, -50%);
   pointer-events: none;
 }
-
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .vdo iframe {
     display: none;
   }
