--- a/css/custom.css
+++ b/css/custom.css
@@ -817,7 +817,7 @@ header.main-header .header-sticky.active {
   position: absolute;
   top: 0;
   left: 0;
-  background: url("../images/gym/DSC03428.JPG");
+  background: url("../images/gym/banner-img.JPG");
   opacity: 0.2;
   background-repeat: no-repeat;
   background-position: center center;
@@ -833,7 +833,7 @@ header.main-header .header-sticky.active {
 }
 
 .hero.hero-bg-image {
-  background: url("../images/hero-bg.jpg") no-repeat;
+  background: url("../images/gym/DSC03428.JPG") no-repeat;
   background-position: center center;
   background-size: cover;
   padding: 200px 0 120px;
@@ -1814,7 +1814,7 @@ header.main-header .header-sticky.active {
 /***  	   11. Our Faqs css	  	  ***/
 /************************************/
 
-.our-faqs {
+/* .our-faqs {
   background-image: url("../images/section-bg-circle-shape.png");
   background-repeat: no-repeat;
   background-position: center center;
@@ -1931,7 +1931,7 @@ header.main-header .header-sticky.active {
 .faq-accordion .accordion-item .accordion-body p {
   color: var(--secondary-color);
   margin: 0;
-}
+} */
 
 /************************************/
 /***   12. Our Testimonials css	  ***/
@@ -2396,7 +2396,7 @@ header.main-header .header-sticky.active {
   position: absolute;
   top: 0;
   left: 0;
-  background: url(../images/section-bg-circle-shape.png);
+  background: url(../images/gym/breadcrum.JPG);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 100% auto;
