--- a/css/custom.css
+++ b/css/custom.css
@@ -833,7 +833,7 @@ header.main-header .header-sticky.active {
 }
 
 .hero.hero-bg-image {
-  background: url("../images/gym/DSC03428.JPG") no-repeat;
+  background: url("../images/gym/banner-img.JPG") no-repeat;
   background-position: center center;
   background-size: cover;
   padding: 200px 0 120px;
